--- a/LetsEat.css
+++ b/LetsEat.css
@@ -2,15 +2,15 @@
   This text is enclosed in a box.
 </div>
 .boxed {
-  border: 1px solid white ;
+  border: 1px solid white;
 }
   p{
     font-family: impact;
     color: white;
-    letter-spacing: 3px
+    letter-spacing: 3px;
   }
 h1{
-  padding-top: 150px;
+  padding-top: 120px;
   font-family: Impact;
   color: white;
   letter-spacing: 3px;
